--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,52 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-.login-wrapper form {
-  margin: auto auto;
+#login-wrapper {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../img/login-background.png");
+  /* text-align: center; */
+}
+
+#login-wrapper .login-container {
+  background-color: white;
+  width: 17%;
+  /* height: 10%; */
+  padding: 1rem 2rem;
+  margin: auto;
+}
+
+#login-wrapper .img-container {
+  display: flex;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+#login-wrapper img {
+  width: 100%;
+}
+
+#login-wrapper form input[type="email"] {
+  width: 100%;
+  padding: 5px 10px;
+  margin: 5px 0 20px;
+  display: inline-block;
+  border: 1px solid #009696;
+  /* border-radius: 5px; */
+  box-sizing: border-box;
+}
+
+#login-wrapper form input[type="submit"] {
+  display: flex;
+  color: white;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: #008080;
+  margin-left: auto;
+  margin-right: 0;
 }
