--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,24 @@
 .login-wrapper form {
   margin: auto auto;
 }
+
+.Sidebar{
+  position: fixed;
+  margin: 6px;
+  width: 151px;
+  height: 97vh;
+  background-image: url("../img/S.Bg.PNG");
+  background-size: contain;
+  border-radius: 20px;
+  border: #005AAA;
+  border-width: 2px;
+}
+
+.S-Background{
+
+}  
+
+h4{
+  color:white;
+
+}
