--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,38 @@
   border-width: 2px;
 }
 
-.S-Background{
+.S-1{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: 50px;
+    width: 128px;
+}
 
-}  
+.S-Item{
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 50px;
+    width: 128px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #28A1A3;
+    border-radius: 5px;
+}
+
+.S-Item:hover{
+    background-color: #ffffff;
+    background-opacity: 13%;
+}
 
 h4{
   color:white;
-
+  width: 105px;
+  margin: 0px;
+  padding: 0px;
+  
 }
