bug gefixt waar afstanden tussen velden in users.php inconsistent waren wanneer er error meldingen waren

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body {
 .userForm {
   width: 80%;
   margin: 0 auto;
-  flex-flow: column wrap;
+  flex-direction: column;
 }
 
 .userForm input[type="submit"] {
