--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  font-style: normal;
 }
 
 .login-wrapper form {
@@ -9,7 +10,7 @@
 
 .Sidebar{
   position: fixed;
-  margin: 6px;
+  margin: 3px;
   width: 151px;
   height: 97vh;
   background-image: url("../img/S.Bg.PNG");
@@ -27,34 +28,54 @@
     width: 128px;
 }
 
-.S-Item{
-    margin: 10px;
+.S-2{
+    margin-top: 220px;
     display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: 50px;
+    width: 128px;
+    text-align-last: center;
+}
+
+.S-3{
+  margin-top:90px;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  height: 50px;
+  width: 128px;
+  text-align-last: center;
+}
+
+.S-Item{
+    margin: 6px;
+    vertical-align: auto;
+    display: flex;
     flex-direction: row;
-    justify-content: space-between;
     height: 50px;
     width: 128px;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: #28A1A3;
-    border-radius: 5px;
-}
-.bgr:hover{
-    background-color: white;
-    opacity: 13%;
+    border-radius: 8px;
+    color: white;
 }
 
 .S-Item:hover{
-    background-color: #ffffff;
-    opacity: 13%;
+    background: rgba(255, 255, 255, 0.13);
 }
 
 h4{
   color:white;
   width: 105px;
-  margin: 0px;
+  margin: 8px;
   padding: 0px;
-  
-}
+  font-size: 12px;
+  }
+
+  h5{
+    font-size: 16px;
+    margin: 8px;
+    margin-left: 27px;
+  }
