--- a/css/style.css
+++ b/css/style.css
@@ -8,74 +8,83 @@
   margin: auto auto;
 }
 
-.Sidebar{
+.Sidebar {
   position: fixed;
-  margin: 3px;
-  width: 151px;
-  height: 97vh;
+  width: 20vh;
+  height: 100vh;
   background-image: url("../img/S.Bg.PNG");
-  background-size: contain;
+  background-size: auto;
   border-radius: 20px;
-  border: #005AAA;
+  border: #005aaa;
   border-width: 2px;
 }
 
-.S-1{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    height: 50px;
-    width: 128px;
+.S-1 {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  flex-direction: column;
+  height: 350px;
+  width: 20vh;
 }
 
-.S-2{
-    margin-top: 220px;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    height: 50px;
-    width: 128px;
-    text-align-last: center;
-}
-
-.S-3{
-  margin-top:90px;
+.S-2 {
+  margin: 75px auto 0;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
   height: 50px;
-  width: 128px;
+  width: 20vh;
   text-align-last: center;
 }
 
-.S-Item{
-    margin: 6px;
-    vertical-align: auto;
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    width: 128px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #28A1A3;
-    border-radius: 8px;
-    color: white;
+.S-3 {
+  margin: 90px auto 0;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  height: 50px;
+  width: 20vh;
+  text-align-last: center;
 }
 
-.S-Item:hover{
-    background: rgba(255, 255, 255, 0.13);
+.S-Item {
+  margin: 6px auto 0;
+  vertical-align: auto;
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  width: 80%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #28a1a3;
+  border-radius: 8px;
+  color: white;
 }
 
-h4{
-  color:white;
-  width: 105px;
-  margin: 8px;
+.S-Item:hover {
+  background: rgba(255, 255, 255, 0.13);
+}
+
+.Sidebar h4 {
+  color: white;
+  width: 100%;
+  margin: 14px auto 12px;
   padding: 0px;
   font-size: 12px;
-  }
+}
 
-  h5{
-    font-size: 16px;
-    margin: 8px;
-    margin-left: 27px;
-  }
+.Sidebar a {
+  text-decoration: none;
+  width: 100%;
+}
+
+.S-3 a {
+  margin: auto auto;
+  color: white;
+}
+
+.S-3 h5 {
+  font-size: 16px;
+  width: 100%;
+}
