--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@
 
 .Sidebar {
   position: fixed;
-  width: 20vh;
-  height: 100vh;
+  margin: 6px;
+  width: 23.28vh;
+  height: 98vh;
   background-image: url("../img/S.Bg.PNG");
-  background-size: auto;
+  background-size: contain;
   border-radius: 20px;
   border: #005aaa;
   border-width: 2px;
@@ -22,10 +23,10 @@
 .S-1 {
   display: flex;
   flex-wrap: nowrap;
-  margin: 0 auto;
+  margin: 0px;
   flex-direction: column;
-  height: 350px;
-  width: 20vh;
+  height: 300px;
+  width: 23.25vh;
 }
 
 .S-2 {
@@ -34,26 +35,26 @@
   flex-wrap: nowrap;
   flex-direction: column;
   height: 50px;
-  width: 20vh;
+  width: 23.25vh;
   text-align-last: center;
 }
 
 .S-3 {
-  margin: 90px auto 0;
+  margin: 120px auto 0;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
   height: 50px;
-  width: 20vh;
+  width: 23.25vh;
   text-align-last: center;
 }
 
 .S-Item {
-  margin: 6px auto 0;
+  margin: 10px auto 0;
   vertical-align: auto;
   display: flex;
   flex-direction: row;
-  height: 50px;
+  height: 38px;
   width: 80%;
   border-style: solid;
   border-width: 1px;
@@ -69,8 +70,7 @@
 .Sidebar h4 {
   color: white;
   width: 100%;
-  margin: 14px auto 12px;
-  padding: 0px;
+  margin: 12px auto 12px;
   font-size: 12px;
 }
 
@@ -85,6 +85,7 @@
 }
 
 .S-3 h5 {
-  font-size: 16px;
   width: 100%;
+  font-size: 20px;
+  margin: 12px auto 12px;
 }
