--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,13 @@ body {
   display: flex;
 }
 
-.userForm {
+.form {
   width: 80%;
   margin: 0 auto;
   flex-direction: column;
 }
 
-.userForm input[type="submit"] {
+.form input[type="submit"] {
   width: 100%;
   background-color: #005aaa;
   color: white;
@@ -102,6 +102,18 @@ body {
   background-color: white;
 }
 
+.label-input textarea {
+  border-radius: 4px;
+  width: 100%;
+  padding: 8px 20px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
 .error {
   color: red;
+}
+
+textarea {
+  resize: none;
 }
