--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,10 @@
 }
 
 .top {
- display: flex;
- flex-direction: column;
+  display: flex;
+  height: 100%;
+  justify-content: end;
+  margin: auto 5rem 0;
 }
 
 .gkleur {
@@ -32,8 +34,8 @@
   background-color: blue;
 }
 
-.dot{
-  background-color: #AEAEAE;
+.dot {
+  background-color: #aeaeae;
   border: #646262;
   border-width: 1px;
   border-radius: 50%;
@@ -44,7 +46,7 @@
 .Sidebar {
   position: fixed;
   margin: 6px;
-  width: 23.28vh;
+  width: 11.5vw;
   height: 98vh;
   background-image: url("../img/S.Bg.PNG");
   background-size: contain;
@@ -121,4 +123,21 @@
   width: 100%;
   font-size: 20px;
   margin: 12px auto 12px;
+}
+
+header {
+  height: 118px;
+  width: 88vw;
+  margin: 10px 10px 10px 11.5vw;
+  background-color: gray;
+}
+
+.page {
+  display: flex;
+  /* flex-direction: row-reverse; */
+}
+
+.groep {
+  display: flex;
+  margin: auto 5rem auto;
 }
