--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,26 @@
 .top {
   display: flex;
   height: 100%;
+  border-width: 1px;
+  border-color: black;
   justify-content: end;
-  margin: auto 5rem 0;
+  margin: 10px 10px 10px 11.5vw;
+}
+
+header {
+  height: 118px;
+  width: 88vw;
+  margin-left: auto;
+  border-color: black;
+  background-color: #CBCBCB;
 }
 
 .gkleur {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background-color: blue;
+  margin:2px;
+  background-color: #009BAA;
 }
 
 .red {
@@ -31,12 +42,12 @@
 }
 
 .blue {
-  background-color: blue;
+  background-color: #009BAA;
 }
 
 .dot {
   background-color: #aeaeae;
-  border: #646262;
+  border-color: #646262;
   border-width: 1px;
   border-radius: 50%;
   width: 10px;
@@ -123,13 +134,6 @@
   width: 100%;
   font-size: 20px;
   margin: 12px auto 12px;
-}
-
-header {
-  height: 118px;
-  width: 88vw;
-  margin: 10px 10px 10px 11.5vw;
-  background-color: gray;
 }
 
 .page {
