--- a/css/style.css
+++ b/css/style.css
@@ -53,23 +53,26 @@ body {
   margin-right: 0;
 }
 
-#container {
+.container {
   display: flex;
 }
 
-#sub-container {
+.sub-container {
   width: 88.5vw;
   margin-left: 11.5vw;
 }
 
 /*ticketoverzicht*/
 .box {
-  width: 100%;
-  height: 340px;
+  width: 80%;
+  margin: 0 auto;
+  /* height: 340px;
   display: flex;
   flex-wrap: nowrap;
   padding-left: 108px;
-  padding-top: 267px;
+  padding-top: 267px; */
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .ticket-link {
@@ -77,7 +80,7 @@ body {
   color: black;
 }
 
-.container {
+.container-overview {
   padding: 5px;
   width: 220px;
 }
