--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,22 @@ textarea {
   height: 10px;
 }
 
-.Sidebar {
+.Sidebar-mobile {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  margin: 6px;
+  width: 250px;
+  height: 98vh;
+  background-image: url("../img/S.Bg.PNG");
+  background-size: cover;
+  border-radius: 20px;
+  border: #005aaa;
+  border-width: 2px;
+  transition: left 1s ease;
+}
+
+.Sidebar-desktop {
   display: block;
   position: fixed;
   z-index: 100;
@@ -292,7 +307,6 @@ textarea {
   border-radius: 20px;
   border: #005aaa;
   border-width: 2px;
-  transition: top 1s ease;
 }
 
 .S-1 {
@@ -342,14 +356,16 @@ textarea {
   background: rgba(255, 255, 255, 0.13);
 }
 
-.Sidebar h4 {
+.Sidebar-mobile h4,
+.Sidebar-desktop h4 {
   color: white;
   width: 100%;
   margin: 12px auto 12px;
   font-size: 12px;
 }
 
-.Sidebar a {
+.Sidebar-mobile a,
+.Sidebar-desktop a {
   text-decoration: none;
   width: 100%;
 }
@@ -506,7 +522,7 @@ header {
     display: flex;
   }
 
-  .Sidebar {
+  .Sidebar-desktop {
     display: none;
   }
 }
