header ziet er nu goed uit op elke pagina

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
 }
 
 .users-title {
-  margin-top: 9rem;
+  margin-top: 1rem;
   text-align: center;
 }
 
@@ -419,7 +419,6 @@ header {
   width: 50%;
   float: left;
   padding-left: 20px;
-  margin-top: 128px;
 }
 
 #ticketEmailContainer {
@@ -454,7 +453,6 @@ header {
 }
 
 #responseContainer {
-  margin-top: 128px;
   padding-left: 20px;
   width: 50%;
   float: left;
@@ -471,7 +469,7 @@ header {
 }
 
 .existingResponseContainer {
-  width: 60%;
+  width: 100%;
   padding-top: 20px;
   float: left;
 }
@@ -486,7 +484,8 @@ header {
 }
 
 .ticket-sort {
-  margin-top: 128px;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .avatar {
@@ -498,6 +497,11 @@ header {
   display: none;
   align-items: center;
   font-size: 2.25rem;
+}
+
+.space {
+  height: 128px;
+  width: 100%;
 }
 
 @media (max-width: 1320px) {
