--- a/css/style.css
+++ b/css/style.css
@@ -156,12 +156,15 @@ header {
 .groep {
   display: flex;
   margin: auto 5rem auto;
+}
 
-.main {
-    background-color: white;
-  	margin-left: 220px;
-    width: 100%;
-    height: 100%;
-    margin: 7px;
-    z-index: 5;
+  .main {
+  background-color: green;
+  border: #005aaa;
+  color: red;
+  margin-left: 220px;
+  width: 100%;
+  height: 100%;
+  margin: 7px;
+  z-index: 5;
 }
