--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
   min-height: 100vh;
   height: fit-content;
   background-color: #CBCBCB;
+  /* flex-direction: row-reverse; */
 }
 
 
@@ -33,7 +34,7 @@ header {
   position: fixed;
   height: 118px;
   width: 88vw;
-  margin-left: 11.65vw;
+  margin-left: 220px;
   border-color: black;
   background-color: #CBCBCB;
   z-index: 3;
@@ -64,11 +65,11 @@ header {
   background-color: #aeaeae;
   align-self: ;
   margin: auto;
-  padding: 0px;
   border-color: #646262;
   border-style: solid;
   border-width: 2px;
   border-radius: 50%;
+  align-content: center;
   width: 10px;
   height: 10px;
 }
@@ -162,12 +163,12 @@ header {
 }
 
 .main {
-    display: flex;
-    background-color: #E8E8E8;
-    top: 10%;
-    margin-top: 6%;
-    padding-top: 0.11vh;
-    margin-left: 11.97vw;  
-    width: 87.5vw;
-    z-index: 5;
+    background-color: white;
+    left: 220px;
+  	margin-left: 17vw;
+    margin-top: 300px;
+    width: 83vw;
+    height: 100%;
+    margin: 7px;
+    z-index: 0;
 }
